--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,7 @@
 name: flutter_neumorphic
 description: A complete, ready to use, Neumorphic ui kit for Flutter. Dark theming compatible & fully customizable.
 version: 3.1.0
+publish_to: none
 #authors: [
 #  Florent Champigny <champigny.florent@gmail.com>,
 #  Olivier Bonvila <olivier.bonvila@idean.com>,
